deploy: 9c5b9797ed7d293873a56e09fb3e8edb5323c931

--- a/drafts/dummy.html
+++ b/drafts/dummy.html
@@ -14,10 +14,13 @@
 <link rel="modulepreload" href="../_observablehq/stdlib.js">
 <link rel="modulepreload" href="../_node/@turf/turf@7.1.0/index.js">
 <link rel="modulepreload" href="../_npm/d3-require@1.3.0/_esm.js">
-<link rel="modulepreload" href="./components/radialglyph.js">
-<link rel="modulepreload" href="./components/gridded-glyphmaps/index.min.js">
-<link rel="modulepreload" href="./components/osgb/index.js">
-<link rel="modulepreload" href="./components/utils.js">
+<link rel="modulepreload" href="../_import/components/radialglyph.e10c9304.js">
+<link rel="modulepreload" href="../_import/components/gridded-glyphmaps/index.min.e22a1d11.js">
+<link rel="modulepreload" href="../_import/components/osgb/index.1d2476df.js">
+<link rel="modulepreload" href="../_import/components/utils.ec49f1d6.js">
+<link rel="modulepreload" href="../_npm/d3@7.9.0/_esm.js">
+<link rel="modulepreload" href="../_import/components/osgb/ellipsoid.1ac4eba6.js">
+<link rel="modulepreload" href="../_npm/topojson-client@3.1.0/_esm.js">
 <link rel="modulepreload" href="../_npm/lodash@4.17.21/_esm.js">
 <link rel="modulepreload" href="../_observablehq/stdlib/duckdb.js">
 <link rel="modulepreload" href="../_npm/htl@0.3.1/_esm.js">
@@ -137,24 +140,6 @@
 <link rel="modulepreload" href="../_node/@turf/union@7.1.0/index.js">
 <link rel="modulepreload" href="../_node/@turf/unkink-polygon@7.1.0/index.js">
 <link rel="modulepreload" href="../_node/@turf/voronoi@7.1.0/index.js">
-<link rel="modulepreload" href="../_npm/d3@7.9.0/_esm.js">
-<link rel="modulepreload" href="../_npm/interval-tree-1d@1.0.4/_esm.js">
-<link rel="modulepreload" href="../_npm/apache-arrow@18.0.0/_esm.js">
-<link rel="modulepreload" href="../_node/geojson-equality-ts@1.0.2/index.js">
-<link rel="modulepreload" href="../_node/point-in-polygon-hao@1.1.0/index.js">
-<link rel="modulepreload" href="../_node/@turf/jsts@2.7.1/index.js">
-<link rel="modulepreload" href="../_node/d3-geo@1.7.1/index.js">
-<link rel="modulepreload" href="../_node/rbush@3.0.1/index.js">
-<link rel="modulepreload" href="../_node/skmeans@0.9.7/index.js">
-<link rel="modulepreload" href="../_node/topojson-client@3.1.0/index.js">
-<link rel="modulepreload" href="../_node/topojson-server@3.0.1/index.js">
-<link rel="modulepreload" href="../_node/concaveman@1.2.1/index.js">
-<link rel="modulepreload" href="../_node/polygon-clipping@0.15.7/index.js">
-<link rel="modulepreload" href="../_node/marchingsquares@1.3.3/index.js">
-<link rel="modulepreload" href="../_node/sweepline-intersections@1.5.0/index.js">
-<link rel="modulepreload" href="../_node/fast-deep-equal@3.1.3/index.js">
-<link rel="modulepreload" href="../_node/earcut@2.2.4/index.js">
-<link rel="modulepreload" href="../_node/d3-voronoi@1.1.2/index.js">
 <link rel="modulepreload" href="../_npm/d3-array@3.2.4/_esm.js">
 <link rel="modulepreload" href="../_npm/d3-axis@3.0.0/_esm.js">
 <link rel="modulepreload" href="../_npm/d3-brush@3.0.0/_esm.js">
@@ -185,6 +170,25 @@
 <link rel="modulepreload" href="../_npm/d3-timer@3.0.1/_esm.js">
 <link rel="modulepreload" href="../_npm/d3-transition@3.0.1/_esm.js">
 <link rel="modulepreload" href="../_npm/d3-zoom@3.0.0/_esm.js">
+<link rel="modulepreload" href="../_npm/interval-tree-1d@1.0.4/_esm.js">
+<link rel="modulepreload" href="../_npm/apache-arrow@18.0.0/_esm.js">
+<link rel="modulepreload" href="../_node/geojson-equality-ts@1.0.2/index.js">
+<link rel="modulepreload" href="../_node/point-in-polygon-hao@1.1.0/index.js">
+<link rel="modulepreload" href="../_node/@turf/jsts@2.7.1/index.js">
+<link rel="modulepreload" href="../_node/d3-geo@1.7.1/index.js">
+<link rel="modulepreload" href="../_node/rbush@3.0.1/index.js">
+<link rel="modulepreload" href="../_node/skmeans@0.9.7/index.js">
+<link rel="modulepreload" href="../_node/topojson-client@3.1.0/index.js">
+<link rel="modulepreload" href="../_node/topojson-server@3.0.1/index.js">
+<link rel="modulepreload" href="../_node/concaveman@1.2.1/index.js">
+<link rel="modulepreload" href="../_node/polygon-clipping@0.15.7/index.js">
+<link rel="modulepreload" href="../_node/marchingsquares@1.3.3/index.js">
+<link rel="modulepreload" href="../_node/sweepline-intersections@1.5.0/index.js">
+<link rel="modulepreload" href="../_node/fast-deep-equal@3.1.3/index.js">
+<link rel="modulepreload" href="../_node/earcut@2.2.4/index.js">
+<link rel="modulepreload" href="../_node/d3-voronoi@1.1.2/index.js">
+<link rel="modulepreload" href="../_npm/internmap@2.0.3/_esm.js">
+<link rel="modulepreload" href="../_npm/delaunator@5.0.1/_esm.js">
 <link rel="modulepreload" href="../_npm/binary-search-bounds@2.0.5/_esm.js">
 <link rel="modulepreload" href="../_npm/tslib@2.8.1/_esm.js">
 <link rel="modulepreload" href="../_npm/flatbuffers@24.3.25/_esm.js">
@@ -192,8 +196,6 @@
 <link rel="modulepreload" href="../_node/tinyqueue@2.0.3/index.js">
 <link rel="modulepreload" href="../_node/point-in-polygon@1.1.0/index.js">
 <link rel="modulepreload" href="../_node/robust-predicates@2.0.4/umd/orient2d.min.js">
-<link rel="modulepreload" href="../_npm/internmap@2.0.3/_esm.js">
-<link rel="modulepreload" href="../_npm/delaunator@5.0.1/_esm.js">
 <link rel="modulepreload" href="../_npm/robust-predicates@3.0.2/_esm.js">
 <script type="module">
 
@@ -201,13 +203,13 @@ import {define} from "../_observablehq/client.js";
 import {registerFile, FileAttachment} from "../_observablehq/stdlib.js";
 import {registerTable} from "../_observablehq/stdlib/duckdb.js";
 
-registerFile("./data/census_data_output.parquet", {"name":"./data/census_data_output.parquet","path":"./data/census_data_output.parquet"});
-registerFile("./data/geo.csv", {"name":"./data/geo.csv","mimeType":"text/csv","path":"./data/geo.csv"});
-registerTable("geo", FileAttachment("./data/geo.csv"));
-registerTable("census_data_source", FileAttachment("./data/census_data_output.parquet"));
+registerFile("./../data/census_data_output.parquet", {"name":"./../data/census_data_output.parquet","path":"../_file/data/census_data_output.1374b127.parquet","lastModified":1731419800388});
+registerFile("./../data/geo.csv", {"name":"./../data/geo.csv","mimeType":"text/csv","path":"../_file/data/geo.8ba75b99.csv","lastModified":1731419800404});
+registerTable("geo", FileAttachment("../data/geo.csv"));
+registerTable("census_data_source", FileAttachment("../data/census_data_output.parquet"));
 
-define({id: "1f3981d9", outputs: ["turf","require","d3","flubber","RadialGlyph","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","downloadBoundaries","joinCensusDataToGeoJSON","convertGridCsvToGeoJson","context2d"], body: async () => {
-const [turf, {require}, {RadialGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {downloadBoundaries, joinCensusDataToGeoJSON, convertGridCsvToGeoJson, context2d}] = await Promise.all([import("../_node/@turf/turf@7.1.0/index.js"), import("../_npm/d3-require@1.3.0/_esm.js"), import("./components/radialglyph.js"), import("./components/gridded-glyphmaps/index.min.js"), import("./components/osgb/index.js"), import("./components/utils.js")]);
+define({id: "f8ff4578", outputs: ["turf","require","d3","flubber","RadialGlyph","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","downloadBoundaries","joinCensusDataToGeoJSON","convertGridCsvToGeoJson","context2d"], body: async () => {
+const [turf, {require}, {RadialGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {downloadBoundaries, joinCensusDataToGeoJSON, convertGridCsvToGeoJson, context2d}] = await Promise.all([import("../_node/@turf/turf@7.1.0/index.js"), import("../_npm/d3-require@1.3.0/_esm.js"), import("../_import/components/radialglyph.e10c9304.js"), import("../_import/components/gridded-glyphmaps/index.min.e22a1d11.js"), import("../_import/components/osgb/index.1d2476df.js"), import("../_import/components/utils.ec49f1d6.js")]);
 // import * as d3 from "npm:d3";
 const d3 = require("d3", "d3-geo-projection");
 const flubber = require("flubber@0.4");
@@ -315,12 +317,11 @@ AND geo.LA = (SELECT replace(${la_code}, '"', ''''))`;
 return {list_of_codes};
 }});
 
-define({id: "dc26e081", inputs: ["list_of_codes","downloadBoundaries","geogBoundary"], outputs: ["list_of_code","regular_geodata"], body: async (list_of_codes,downloadBoundaries,geogBoundary) => {
+define({id: "696b6446", inputs: ["list_of_codes","downloadBoundaries","geogBoundary"], outputs: ["list_of_code","regular_geodata"], body: async (list_of_codes,downloadBoundaries,geogBoundary) => {
 const list_of_code = [...list_of_codes].map((row) => row.code);
 const regular_geodata = await downloadBoundaries(geogBoundary, list_of_code);
 
 // display(transformCoordinates(turf.bbox(regular_geodata)));
-
 return {list_of_code,regular_geodata};
 }});
 
@@ -1237,7 +1238,7 @@ const transformedShapes = convertToGeoJSON(
 return {transformedShapes};
 }});
 
-define({id: "f739de06", inputs: ["_","regular_geodata_withcensus","transformGeometry","turf","grid_geodata_withcensus","transformedShapes"], outputs: ["regularGeodataLookup","gridGeodataLookup","transformedShapesLookup"], body: (_,regular_geodata_withcensus,transformGeometry,turf,grid_geodata_withcensus,transformedShapes) => {
+define({id: "b6458ed4", inputs: ["_","regular_geodata_withcensus","transformGeometry","turf","grid_geodata_withcensus","transformedShapes"], outputs: ["regularGeodataLookup","gridGeodataLookup","transformedShapesLookup"], body: (_,regular_geodata_withcensus,transformGeometry,turf,grid_geodata_withcensus,transformedShapes) => {
 // const regularGeodataLookup = _.keyBy(
 //   regular_geodata_withcensus.features.map((feat) => {
 //     return { ...feat, centroid: turf.getCoord(turf.centroid(feat.geometry)) };
@@ -1278,7 +1279,6 @@ const gridGeodataLookup = _.keyBy(
   (feat) => feat.properties.code
 );
 
-
 const transformedShapesLookup = _.keyBy(
   transformedShapes.features.map((feat) => {
     return { ...feat, centroid: turf.getCoord(turf.centroid(feat.geometry)) };
@@ -1288,7 +1288,6 @@ const transformedShapesLookup = _.keyBy(
 
 // display("transformedShapesLookup");
 // display(transformedShapesLookup);
-
 return {regularGeodataLookup,gridGeodataLookup,transformedShapesLookup};
 }});
 
@@ -1312,7 +1311,7 @@ function valueDiscretiser(geomLookup) {
 return {glyphmapTypeInput,glyphmapType,valueDiscretiser};
 }});
 
-define({id: "25a618fe", inputs: ["turf","createDiscretiserValue"], outputs: ["valueDiscretiserInMorph"], body: (turf,createDiscretiserValue) => {
+define({id: "36d82749", inputs: ["turf","createDiscretiserValue"], outputs: ["valueDiscretiserInMorph"], body: (turf,createDiscretiserValue) => {
 function valueDiscretiserInMorph(inp) {
   // create lookup on the fly
   let geomLookup = Object.fromEntries(
@@ -1336,11 +1335,10 @@ function valueDiscretiserInMorph(inp) {
     boundaryFn: (key) => geomLookup[key]?.geometry.coordinates[0], // Access the boundary (first set of coordinates)
   });
 }
-
 return {valueDiscretiserInMorph};
 }});
 
-define({id: "fae5fd6f", inputs: ["transformCoordinates","turf","regular_geodata","data","regularGeodataLookup","d3","insideCell","drawRadialMultivariateGlyph"], outputs: ["glyphMapSpec"], body: (transformCoordinates,turf,regular_geodata,data,regularGeodataLookup,d3,insideCell,drawRadialMultivariateGlyph) => {
+define({id: "76a6b524", inputs: ["transformCoordinates","turf","regular_geodata","data","regularGeodataLookup","d3","insideCell","drawRadialMultivariateGlyph"], outputs: ["glyphMapSpec"], body: (transformCoordinates,turf,regular_geodata,data,regularGeodataLookup,d3,insideCell,drawRadialMultivariateGlyph) => {
 // glyphmap basic specs
 
 function glyphMapSpec(width = 800, height = 600) {
@@ -1364,7 +1362,6 @@ function glyphMapSpec(width = 800, height = 600) {
     customMap: {
       scaleParams: [],
 
-
       // discretiserFn: valueDiscretiser(regularGeodataLookup),
 
       initFn: (cells, cellSize, global, panel) => {
@@ -1373,7 +1370,6 @@ function glyphMapSpec(width = 800, height = 600) {
 
       preAggrFn: (cells, cellSize, global, panel) => {
         // console.log("global", global);
-
       },
 
       aggrFn: (cell, row, weight, global, panel) => {
@@ -1421,9 +1417,7 @@ function glyphMapSpec(width = 800, height = 600) {
       drawFn: (cell, x, y, cellSize, ctx, global, panel) => {
         const boundary = cell.getBoundary(0);
 
-
         // console.log("boundary", boundary);
-
 
         if (boundary[0] != boundary[boundary.length - 1]) {
           boundary.push(boundary[0]);
@@ -1447,18 +1441,16 @@ function glyphMapSpec(width = 800, height = 600) {
 
         //draw a radial glyph -> change the array to real data (between 0 and 1)
         drawRadialMultivariateGlyph([0.5, 0.1, 0.9, 0.3], x, y, cellSize, ctx);
-
       },
       postDrawFn: (cells, cellSize, ctx, global, panel) => {},
       tooltipTextFn: (cell) => {},
-
     },
   };
 }
 return {glyphMapSpec};
 }});
 
-define({id: "d8dfe994", body: () => {
+define({id: "fc932c82", body: () => {
 // a workaround for observable reactivity
 // const decarbonisationGlyph = glyphMap({
 //   ...glyphMapSpec(),
@@ -1479,7 +1471,7 @@ define({id: "e19f5f4a", body: () => {
 // glyphmapSpec().setData(transformedShapes.features);
 }});
 
-define({id: "aec38d74", inputs: ["glyphMap","glyphMapSpec","valueDiscretiser","regularGeodataLookup"], outputs: ["createGlyphMap"], body: (glyphMap,glyphMapSpec,valueDiscretiser,regularGeodataLookup) => {
+define({id: "12b8713b", inputs: ["glyphMap","glyphMapSpec","valueDiscretiser","regularGeodataLookup"], outputs: ["createGlyphMap"], body: (glyphMap,glyphMapSpec,valueDiscretiser,regularGeodataLookup) => {
 function createGlyphMap(glyphmapType, { width, height }) {
   // console.log(width, height);
   if (glyphmapType == "Polygons") {
@@ -1494,9 +1486,7 @@ function createGlyphMap(glyphmapType, { width, height }) {
   }
 }
 
-
 // const glyphmap = glyphMapSpec();
-
 
 // display(createGlyphMap(glyphmapType));
 // display(valueDiscretiser(regularGeodataLookup));
@@ -1586,7 +1576,7 @@ return {insideCell};
 <div id="observablehq-center">
 <main id="observablehq-main" class="observablehq">
 <!-- ------------------ # Imports ------------------  -->
-<div class="observablehq observablehq--block"><!--:1f3981d9:--></div>
+<div class="observablehq observablehq--block"><!--:f8ff4578:--></div>
 <div class="observablehq observablehq--block"><!--:5dd85f8f:--></div>
 <!-- ------------ The HTML Layout ------------ -->
 <!-------- Stylesheets -------->
@@ -1638,7 +1628,7 @@ body, html {
 <div class="observablehq observablehq--block"><!--:76ba71c3:--></div>
 <div class="observablehq observablehq--block"><!--:ac7e408e:--></div>
 <div class="observablehq observablehq--block"><!--:cad06486:--></div>
-<div class="observablehq observablehq--block"><!--:dc26e081:--></div>
+<div class="observablehq observablehq--block"><!--:696b6446:--></div>
 <div class="observablehq observablehq--block"><!--:0edc8540:--></div>
 <div class="observablehq observablehq--block"><!--:47b53055:--></div>
 <!-- ------------------ # Morphing Geometry Functions ------------------  -->
@@ -1659,14 +1649,14 @@ body, html {
 <!-- ------------------ # Gridded-Glyphmap Functions ------------------  -->
 <div class="observablehq observablehq--block"><!--:e38f4f2a:--></div>
 <div class="observablehq observablehq--block"><!--:99591def:--></div>
-<div class="observablehq observablehq--block"><!--:f739de06:--></div>
+<div class="observablehq observablehq--block"><!--:b6458ed4:--></div>
 <div class="observablehq observablehq--block"><!--:21da4792:--></div>
-<div class="observablehq observablehq--block"><!--:25a618fe:--></div>
-<div class="observablehq observablehq--block"><!--:fae5fd6f:--></div>
-<div class="observablehq observablehq--block"><!--:d8dfe994:--></div>
+<div class="observablehq observablehq--block"><!--:36d82749:--></div>
+<div class="observablehq observablehq--block"><!--:76a6b524:--></div>
+<div class="observablehq observablehq--block"><!--:fc932c82:--></div>
 <div class="observablehq observablehq--block"><!--:f250ba26:--></div>
 <div class="observablehq observablehq--block"><!--:e19f5f4a:--></div>
-<div class="observablehq observablehq--block"><!--:aec38d74:--></div>
+<div class="observablehq observablehq--block"><!--:12b8713b:--></div>
 <div class="observablehq observablehq--block"><!--:92e60971:--></div>
 <div class="observablehq observablehq--block"><!--:246c80d3:--></div>
 <div class="observablehq observablehq--block"><!--:9d040433:--></div>
