--- a/drafts/dummy2.html
+++ b/drafts/dummy2.html
@@ -14,10 +14,13 @@
 <link rel="modulepreload" href="../_observablehq/stdlib.js">
 <link rel="modulepreload" href="../_node/@turf/turf@7.1.0/index.js">
 <link rel="modulepreload" href="../_npm/d3-require@1.3.0/_esm.js">
-<link rel="modulepreload" href="./components/radialglyph.js">
-<link rel="modulepreload" href="./components/gridded-glyphmaps/index.min.js">
-<link rel="modulepreload" href="./components/osgb/index.js">
-<link rel="modulepreload" href="./components/utils.js">
+<link rel="modulepreload" href="../_import/components/radialglyph.e10c9304.js">
+<link rel="modulepreload" href="../_import/components/gridded-glyphmaps/index.min.e22a1d11.js">
+<link rel="modulepreload" href="../_import/components/osgb/index.1d2476df.js">
+<link rel="modulepreload" href="../_import/components/utils.ec49f1d6.js">
+<link rel="modulepreload" href="../_npm/d3@7.9.0/_esm.js">
+<link rel="modulepreload" href="../_import/components/osgb/ellipsoid.1ac4eba6.js">
+<link rel="modulepreload" href="../_npm/topojson-client@3.1.0/_esm.js">
 <link rel="modulepreload" href="../_npm/lodash@4.17.21/_esm.js">
 <link rel="modulepreload" href="../_observablehq/stdlib/duckdb.js">
 <link rel="modulepreload" href="../_npm/htl@0.3.1/_esm.js">
@@ -137,24 +140,6 @@
 <link rel="modulepreload" href="../_node/@turf/union@7.1.0/index.js">
 <link rel="modulepreload" href="../_node/@turf/unkink-polygon@7.1.0/index.js">
 <link rel="modulepreload" href="../_node/@turf/voronoi@7.1.0/index.js">
-<link rel="modulepreload" href="../_npm/d3@7.9.0/_esm.js">
-<link rel="modulepreload" href="../_npm/interval-tree-1d@1.0.4/_esm.js">
-<link rel="modulepreload" href="../_npm/apache-arrow@18.0.0/_esm.js">
-<link rel="modulepreload" href="../_node/geojson-equality-ts@1.0.2/index.js">
-<link rel="modulepreload" href="../_node/point-in-polygon-hao@1.1.0/index.js">
-<link rel="modulepreload" href="../_node/@turf/jsts@2.7.1/index.js">
-<link rel="modulepreload" href="../_node/d3-geo@1.7.1/index.js">
-<link rel="modulepreload" href="../_node/rbush@3.0.1/index.js">
-<link rel="modulepreload" href="../_node/skmeans@0.9.7/index.js">
-<link rel="modulepreload" href="../_node/topojson-client@3.1.0/index.js">
-<link rel="modulepreload" href="../_node/topojson-server@3.0.1/index.js">
-<link rel="modulepreload" href="../_node/concaveman@1.2.1/index.js">
-<link rel="modulepreload" href="../_node/polygon-clipping@0.15.7/index.js">
-<link rel="modulepreload" href="../_node/marchingsquares@1.3.3/index.js">
-<link rel="modulepreload" href="../_node/sweepline-intersections@1.5.0/index.js">
-<link rel="modulepreload" href="../_node/fast-deep-equal@3.1.3/index.js">
-<link rel="modulepreload" href="../_node/earcut@2.2.4/index.js">
-<link rel="modulepreload" href="../_node/d3-voronoi@1.1.2/index.js">
 <link rel="modulepreload" href="../_npm/d3-array@3.2.4/_esm.js">
 <link rel="modulepreload" href="../_npm/d3-axis@3.0.0/_esm.js">
 <link rel="modulepreload" href="../_npm/d3-brush@3.0.0/_esm.js">
@@ -185,6 +170,25 @@
 <link rel="modulepreload" href="../_npm/d3-timer@3.0.1/_esm.js">
 <link rel="modulepreload" href="../_npm/d3-transition@3.0.1/_esm.js">
 <link rel="modulepreload" href="../_npm/d3-zoom@3.0.0/_esm.js">
+<link rel="modulepreload" href="../_npm/interval-tree-1d@1.0.4/_esm.js">
+<link rel="modulepreload" href="../_npm/apache-arrow@18.0.0/_esm.js">
+<link rel="modulepreload" href="../_node/geojson-equality-ts@1.0.2/index.js">
+<link rel="modulepreload" href="../_node/point-in-polygon-hao@1.1.0/index.js">
+<link rel="modulepreload" href="../_node/@turf/jsts@2.7.1/index.js">
+<link rel="modulepreload" href="../_node/d3-geo@1.7.1/index.js">
+<link rel="modulepreload" href="../_node/rbush@3.0.1/index.js">
+<link rel="modulepreload" href="../_node/skmeans@0.9.7/index.js">
+<link rel="modulepreload" href="../_node/topojson-client@3.1.0/index.js">
+<link rel="modulepreload" href="../_node/topojson-server@3.0.1/index.js">
+<link rel="modulepreload" href="../_node/concaveman@1.2.1/index.js">
+<link rel="modulepreload" href="../_node/polygon-clipping@0.15.7/index.js">
+<link rel="modulepreload" href="../_node/marchingsquares@1.3.3/index.js">
+<link rel="modulepreload" href="../_node/sweepline-intersections@1.5.0/index.js">
+<link rel="modulepreload" href="../_node/fast-deep-equal@3.1.3/index.js">
+<link rel="modulepreload" href="../_node/earcut@2.2.4/index.js">
+<link rel="modulepreload" href="../_node/d3-voronoi@1.1.2/index.js">
+<link rel="modulepreload" href="../_npm/internmap@2.0.3/_esm.js">
+<link rel="modulepreload" href="../_npm/delaunator@5.0.1/_esm.js">
 <link rel="modulepreload" href="../_npm/binary-search-bounds@2.0.5/_esm.js">
 <link rel="modulepreload" href="../_npm/tslib@2.8.1/_esm.js">
 <link rel="modulepreload" href="../_npm/flatbuffers@24.3.25/_esm.js">
@@ -192,8 +196,6 @@
 <link rel="modulepreload" href="../_node/tinyqueue@2.0.3/index.js">
 <link rel="modulepreload" href="../_node/point-in-polygon@1.1.0/index.js">
 <link rel="modulepreload" href="../_node/robust-predicates@2.0.4/umd/orient2d.min.js">
-<link rel="modulepreload" href="../_npm/internmap@2.0.3/_esm.js">
-<link rel="modulepreload" href="../_npm/delaunator@5.0.1/_esm.js">
 <link rel="modulepreload" href="../_npm/robust-predicates@3.0.2/_esm.js">
 <script type="module">
 
@@ -201,13 +203,13 @@ import {define} from "../_observablehq/client.js";
 import {registerFile, FileAttachment} from "../_observablehq/stdlib.js";
 import {registerTable} from "../_observablehq/stdlib/duckdb.js";
 
-registerFile("./data/census_data_output.parquet", {"name":"./data/census_data_output.parquet","path":"./data/census_data_output.parquet"});
-registerFile("./data/geo.csv", {"name":"./data/geo.csv","mimeType":"text/csv","path":"./data/geo.csv"});
-registerTable("geo", FileAttachment("./data/geo.csv"));
-registerTable("census_data_source", FileAttachment("./data/census_data_output.parquet"));
+registerFile("./../data/census_data_output.parquet", {"name":"./../data/census_data_output.parquet","path":"../_file/data/census_data_output.1374b127.parquet","lastModified":1731419800388});
+registerFile("./../data/geo.csv", {"name":"./../data/geo.csv","mimeType":"text/csv","path":"../_file/data/geo.8ba75b99.csv","lastModified":1731419800404});
+registerTable("geo", FileAttachment("../data/geo.csv"));
+registerTable("census_data_source", FileAttachment("../data/census_data_output.parquet"));
 
-define({id: "1f3981d9", outputs: ["turf","require","d3","flubber","RadialGlyph","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","downloadBoundaries","joinCensusDataToGeoJSON","convertGridCsvToGeoJson","context2d"], body: async () => {
-const [turf, {require}, {RadialGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {downloadBoundaries, joinCensusDataToGeoJSON, convertGridCsvToGeoJson, context2d}] = await Promise.all([import("../_node/@turf/turf@7.1.0/index.js"), import("../_npm/d3-require@1.3.0/_esm.js"), import("./components/radialglyph.js"), import("./components/gridded-glyphmaps/index.min.js"), import("./components/osgb/index.js"), import("./components/utils.js")]);
+define({id: "f8ff4578", outputs: ["turf","require","d3","flubber","RadialGlyph","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","downloadBoundaries","joinCensusDataToGeoJSON","convertGridCsvToGeoJson","context2d"], body: async () => {
+const [turf, {require}, {RadialGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {downloadBoundaries, joinCensusDataToGeoJSON, convertGridCsvToGeoJson, context2d}] = await Promise.all([import("../_node/@turf/turf@7.1.0/index.js"), import("../_npm/d3-require@1.3.0/_esm.js"), import("../_import/components/radialglyph.e10c9304.js"), import("../_import/components/gridded-glyphmaps/index.min.e22a1d11.js"), import("../_import/components/osgb/index.1d2476df.js"), import("../_import/components/utils.ec49f1d6.js")]);
 // import * as d3 from "npm:d3";
 const d3 = require("d3", "d3-geo-projection");
 const flubber = require("flubber@0.4");
@@ -1457,7 +1459,7 @@ return {insideCell};
 <div id="observablehq-center">
 <main id="observablehq-main" class="observablehq">
 <!-- ------------------ # Imports ------------------  -->
-<div class="observablehq observablehq--block"><!--:1f3981d9:--></div>
+<div class="observablehq observablehq--block"><!--:f8ff4578:--></div>
 <div class="observablehq observablehq--block"><!--:5dd85f8f:--></div>
 <!-- ------------ The HTML Layout ------------ -->
 <!-------- Stylesheets -------->
