--- a/drafts/test.html
+++ b/drafts/test.html
@@ -62,7 +62,7 @@ import {define} from "../_observablehq/client.js";
 import {registerFile, FileAttachment} from "../_observablehq/stdlib.js";
 import {registerTable} from "../_observablehq/stdlib/duckdb.js";
 
-registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.28ee7510.parquet","lastModified":1731274491372});
+registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.28ee7510.parquet","lastModified":1731419800476});
 registerTable("oxford", FileAttachment("../data/oxford_decarbonisation_data.parquet"));
 
 define({id: "7cc7faba", outputs: ["TimeGlyph","GlyphCollection","DecarbonisationModel"], body: async () => {
@@ -191,7 +191,7 @@ const modelSpec = {
 return {modelSpec};
 }});
 
-define({id: "fa04a1de", inputs: ["DecarbonisationModel","modelSpec","newBuildings","display"], outputs: ["model"], body: (DecarbonisationModel,modelSpec,newBuildings,display) => {
+define({id: "3ab11a0a", inputs: ["DecarbonisationModel","modelSpec","newBuildings","display"], outputs: ["model"], body: (DecarbonisationModel,modelSpec,newBuildings,display) => {
 const model = new DecarbonisationModel(modelSpec, newBuildings);
 model.addBuildingFilter((b) => b.properties.substation_headroom >= 500); // custom filtering
 // model.addPriorityRule('multideprivation', 'asc'); // arbitrary priority rule
@@ -202,7 +202,7 @@ model.runModel();
 
 // display(model.getYearInterventions(2024));
 // Get interventions grouped by year and technology
-display(model.getGroupedYearTechInterventions()[2024]["PV"]);
+display(model.getGroupedYearTechInterventions()[2024]);
 
 // Custom groupings interventions
 // display(model.getInterventions()
@@ -255,10 +255,8 @@ const [config, setConfig] = useState({});
 return {useState,config,setConfig};
 }});
 
-define({id: "be58ccf8", inputs: ["Inputs","Event","display"], outputs: ["overallBudgetInput"], body: (Inputs,Event,display) => {
+define({id: "a6fee4b8", inputs: ["Inputs","Event","display"], outputs: ["overallBudgetInput"], body: (Inputs,Event,display) => {
 // Overall Budget
-// const overallBudgetInput = html`<input type="range" min="1000_000" max="100_000_000" step="500_000" value="50_000_000" style="max-width: 300px;" />`;
-
 const overallBudgetInput = Inputs.range([0, 100_000_000], {
   label: "Overall Buget",
   step: 500_000,
@@ -375,12 +373,12 @@ return {technologies,addTechnologyButton};
 <div class="observablehq observablehq--block"><!--:d22197ed:--></div>
 <div class="observablehq observablehq--block"><!--:e990e608:--></div>
 <div class="observablehq observablehq--block"><!--:7a1c2213:--></div>
-<div class="observablehq observablehq--block"><!--:fa04a1de:--></div>
+<div class="observablehq observablehq--block"><!--:3ab11a0a:--></div>
 <h2 id="uncapped-model" tabindex="-1"><a class="observablehq-header-anchor" href="#uncapped-model">Uncapped Model</a></h2>
 <div class="observablehq observablehq--block"><!--:97f07bba:--></div>
 <h2 id="test-ui" tabindex="-1"><a class="observablehq-header-anchor" href="#test-ui">Test UI</a></h2>
 <div class="observablehq observablehq--block"><!--:b19955b4:--></div>
-<div class="observablehq observablehq--block"><!--:be58ccf8:--></div>
+<div class="observablehq observablehq--block"><!--:a6fee4b8:--></div>
 <div class="observablehq observablehq--block"><!--:65764c13:--></div>
 <p><observablehq-loading></observablehq-loading><!--:92440add:--></p>
 <div class="observablehq observablehq--block"><!--:b9a4b229:--></div>
