--- a/drafts/widgets.html
+++ b/drafts/widgets.html
@@ -12,13 +12,14 @@
 <link rel="modulepreload" href="../_observablehq/client.js">
 <link rel="modulepreload" href="../_observablehq/runtime.js">
 <link rel="modulepreload" href="../_observablehq/stdlib.js">
-<link rel="modulepreload" href="../_import/components/budgetAllocator.fc30d0c8.js">
-<link rel="modulepreload" href="../_import/components/miniDecarbModel.1d241d4e.js">
+<link rel="modulepreload" href="../_import/components/budgetAllocator.e2ddd3e7.js">
+<link rel="modulepreload" href="../_import/components/miniDecarbModel.d0583510.js">
 <link rel="modulepreload" href="../_npm/d3@7.9.0/_esm.js">
 <link rel="modulepreload" href="../_observablehq/stdlib/duckdb.js">
-<link rel="modulepreload" href="../_observablehq/stdlib/inputs.js">
-<link rel="modulepreload" href="../_npm/@duckdb/duckdb-wasm@1.28.0/_esm.js">
 <link rel="modulepreload" href="../_npm/htl@0.3.1/_esm.js">
+<link rel="modulepreload" href="../_observablehq/stdlib/inputs.js">
+<link rel="modulepreload" href="../_npm/@observablehq/plot@0.6.16/_esm.js">
+<link rel="modulepreload" href="../_npm/@duckdb/duckdb-wasm@1.28.0/_esm.js">
 <link rel="modulepreload" href="../_npm/isoformat@0.2.1/_esm.js">
 <link rel="modulepreload" href="../_npm/d3-array@3.2.4/_esm.js">
 <link rel="modulepreload" href="../_npm/d3-axis@3.0.0/_esm.js">
@@ -50,9 +51,11 @@
 <link rel="modulepreload" href="../_npm/d3-timer@3.0.1/_esm.js">
 <link rel="modulepreload" href="../_npm/d3-transition@3.0.1/_esm.js">
 <link rel="modulepreload" href="../_npm/d3-zoom@3.0.0/_esm.js">
+<link rel="modulepreload" href="../_npm/interval-tree-1d@1.0.4/_esm.js">
 <link rel="modulepreload" href="../_npm/apache-arrow@18.0.0/_esm.js">
 <link rel="modulepreload" href="../_npm/internmap@2.0.3/_esm.js">
 <link rel="modulepreload" href="../_npm/delaunator@5.0.1/_esm.js">
+<link rel="modulepreload" href="../_npm/binary-search-bounds@2.0.5/_esm.js">
 <link rel="modulepreload" href="../_npm/tslib@2.8.1/_esm.js">
 <link rel="modulepreload" href="../_npm/flatbuffers@24.3.25/_esm.js">
 <link rel="modulepreload" href="../_npm/robust-predicates@3.0.2/_esm.js">
@@ -62,53 +65,17 @@ import {define} from "../_observablehq/client.js";
 import {registerFile, FileAttachment} from "../_observablehq/stdlib.js";
 import {registerTable} from "../_observablehq/stdlib/duckdb.js";
 
-registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./data/oxford_decarbonisation_data.parquet"});
-registerTable("oxford", FileAttachment("./data/oxford_decarbonisation_data.parquet"));
+registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.28ee7510.parquet","lastModified":1731419800476});
+registerTable("oxford", FileAttachment("../data/oxford_decarbonisation_data.parquet"));
 
 define({id: "bda9fba7", outputs: ["BudgetAllocator","MiniDecarbModel"], body: async () => {
-const [{BudgetAllocator}, {MiniDecarbModel}] = await Promise.all([import("../_import/components/budgetAllocator.fc30d0c8.js"), import("../_import/components/miniDecarbModel.1d241d4e.js")]);
+const [{BudgetAllocator}, {MiniDecarbModel}] = await Promise.all([import("../_import/components/budgetAllocator.e2ddd3e7.js"), import("../_import/components/miniDecarbModel.d0583510.js")]);
 
 return {BudgetAllocator,MiniDecarbModel};
 }});
 
-define({id: "0c4fdd7c", inputs: ["BudgetAllocator","display"], outputs: ["totalBudget","startYear","projectLength","allocator","linearAllocation"], body: (BudgetAllocator,display) => {
-const totalBudget = 100_000;
-const startYear = 2024;
-const projectLength = 10;
-
-const allocator = new BudgetAllocator(totalBudget, startYear, projectLength);
-
-// linear allocation
-const linearAllocation = allocator.allocateLinear();
-display(linearAllocation);
-display(allocator.visualize(linearAllocation));
-// console.log(allocator.visualize(linearAllocation));
-// document.body.appendChild(allocator.visualize(linearAllocation));
-
-// // custom allocation with different curve types
-// const logAllocation = allocator.allocateCustom("sqrt");
-// console.log("sqrt    Allocation Recap:", allocator.allocation(logAllocation));
-
-// const expAllocation = allocator.allocateCustom("exp", { exponent: 2 });
-// display(expAllocation);
-// display(allocator.visualize(expAllocation));
-
-// // console.log(
-// //   "Exponential Allocation Recap:",
-// //   allocator.allocation(expAllocation)
-// // );
-
-// const sigmoid = allocator.allocateBudget("sigmoid", false);
-// const sigmoid = allocator.allocateCustom("cubic");
-// display(cubicAllocation);
-// display(allocator.visualize(sigmoid));
-
-// console.log("Cubic Allocation Recap:", allocator.allocation(cubicAllocation));
-return {totalBudget,startYear,projectLength,allocator,linearAllocation};
-}});
-
-define({id: "031eeacd", inputs: ["display","Inputs","sql"], outputs: ["oxford_data"], body: async (display,Inputs,sql) => {
-const oxford_data = ((_) => (display(Inputs.table(_)), _))(await sql`  SELECT DISTINCT
+define({id: "d22197ed", inputs: ["sql"], outputs: ["oxford_data"], body: async (sql) => {
+const oxford_data = await sql`  SELECT DISTINCT
     "UPRN" AS id,
     "LSOA code" AS lsoa,
     "MSOA code" AS msoa,
@@ -154,21 +121,101 @@ const oxford_data = ((_) => (display(Inputs.table(_)), _))(await sql`  SELECT DI
     "Substation - Headroom" AS substation_headroom,
     "Substation - % headroom" AS substation_headroom_pct,
     "Substation - Demand_rag" AS substation_demand
-FROM oxford b;`);
+FROM oxford b;`;
 return {oxford_data};
 }});
 
-define({id: "e990e608", inputs: ["oxford_data"], outputs: ["newBuildings"], body: (oxford_data) => {
+define({id: "2adb250b", inputs: ["oxford_data"], outputs: ["newBuildings","columns"], body: (oxford_data) => {
 const newBuildings = [...oxford_data];
-return {newBuildings};
+const columns = Object.keys(newBuildings[0]);
+return {newBuildings,columns};
 }});
 
-define({id: "c0938516", inputs: ["MiniDecarbModel","newBuildings","display"], outputs: ["configASHP","modelASHP","results"], body: (MiniDecarbModel,newBuildings,display) => {
-const configASHP = {
-  initial_year: 2024,
-  rolledover_budget: 50_000_000,
-  yearly_budgets: [1200000, 30000, 20000, 5000, 3000, 20000], // this will be assigned from budgetAllocator
-  tech: {
+define({id: "5c004f34", inputs: ["view","Inputs","html","Event","Generators","display"], outputs: ["total_budget","start_year","projectLength","project_length","allocationType"], body: (view,Inputs,html,Event,Generators,display) => {
+// Starting year
+const total_budget = view(
+  Inputs.text({
+    label: html`<b>Total Budget</b>`,
+    placeholder: "Available Budget in GBP",
+    value: 100_000_000,
+    submit: true,
+  })
+);
+
+// Starting year
+const start_year = view(
+  Inputs.text({
+    label: html`<b>Start Year</b>`,
+    placeholder: "Starting year?",
+    value: 2024,
+    submit: true,
+  })
+);
+
+// Project length
+const projectLength = Inputs.range([0, 20], {
+  label: html`<b>Project length in years</b>`,
+  step: 1,
+  value: 10,
+});
+projectLength.number.style["max-width"] = "60px";
+Object.assign(projectLength, {
+  oninput: (event) => event.isTrusted && event.stopImmediatePropagation(),
+  onchange: (event) => event.currentTarget.dispatchEvent(new Event("input")),
+});
+const project_length = Generators.input(projectLength);
+display(projectLength);
+
+// Allocation type
+const allocationType = view(
+  Inputs.radio(["linear", "sqrt", "exp", "cubic"], {
+    label: html`<b>Allocation Type</b>`,
+    value: "linear",
+  })
+);
+return {total_budget,start_year,projectLength,project_length,allocationType};
+}});
+
+define({id: "c3ba039f", inputs: ["BudgetAllocator","total_budget","start_year","project_length","allocationType","display"], outputs: ["allocator","allocations"], body: (BudgetAllocator,total_budget,start_year,project_length,allocationType,display) => {
+const allocator = new BudgetAllocator(
+  total_budget,
+  Number(start_year),
+  Number(project_length)
+);
+
+let allocations;
+if (allocationType === "linear") {
+  allocations = allocator.allocateLinear();
+} else {
+  allocations = allocator.allocateCustom(allocationType);
+}
+
+// linear allocation
+// const linearAllocation = allocator.allocateLinear();
+// display(linearAllocation);
+display(allocator.visualise(allocations));
+return {allocator,allocations};
+}});
+
+define({id: "f7665dd7", inputs: ["start_year","allocations"], outputs: ["addTechConfig","addPriority","listOfTech","config"], body: (start_year,allocations) => {
+function addTechConfig(techConfig) {
+  config.tech = {
+    name: techConfig.name,
+    config: techConfig.config,
+  };
+}
+
+function addPriority(name, order = "asc") {
+  const newPriority = {
+    name: name,
+    order: order,
+  };
+
+  config.priorities.push(newPriority);
+}
+
+const listOfTech = {
+  ASHP: {
     name: "ASHP",
     config: {
       suitabilityKey: "ashp_suitability",
@@ -177,14 +224,63 @@ const configASHP = {
       savingsKey: "heat_demand", // will be calculated from a lookup and stored in the building data
     },
   },
-  priorities: [
-    {
-      name: "substation_headroom", //sort by substation headroom
-      order: "asc",
+  PV: {
+    name: "PV",
+    config: {
+      suitabilityKey: "pv_suitability",
+      labourKey: "pv_labour",
+      materialKey: "pv_material",
+      savingsKey: "solar_generation",
     },
-  ],
+  },
 };
 
+let config = {
+  initial_year: Number(start_year),
+  rolledover_budget: 0,
+  yearly_budgets: allocations.map((item) => item.budget),
+  tech: {},
+  priorities: [],
+};
+
+// update config here
+addTechConfig(listOfTech.ASHP);
+// addPriority("substation_headroom", "asc");
+return {addTechConfig,addPriority,listOfTech,config};
+}});
+
+define({id: "203a2375", inputs: ["display","config"], body: (display,config) => {
+// display("Model Configuration");
+display(config);
+}});
+
+define({id: "79324e46", body: () => {
+// const configASHP = {
+//   initial_year: 2024,
+//   rolledover_budget: 50_000_000,
+//   yearly_budgets: [1_200_000, 30000, 20000, 5000, 3000, 20000], // this will be assigned from budgetAllocator
+//   tech: {
+//     name: "ASHP",
+//     config: {
+//       suitabilityKey: "ashp_suitability",
+//       labourKey: "ashp_labour",
+//       materialKey: "ashp_material",
+//       savingsKey: "heat_demand", // will be calculated from a lookup and stored in the building data
+//     },
+//   },
+//   priorities: [
+//     {
+//       name: "substation_headroom", //sort by substation headroom
+//       order: "asc",
+//     },
+//   ],
+// };
+// display("configuration SAHP");
+
+// display(configASHP);
+}});
+
+define({id: "3141ed6a", inputs: ["MiniDecarbModel","config","newBuildings"], outputs: ["modelASHP","results"], body: (MiniDecarbModel,config,newBuildings) => {
 // For priority rules:
 // // Categorical priority
 // model.addPriorityRuleCustom({
@@ -210,25 +306,80 @@ const configASHP = {
 //     return ratings[value] || 0;
 //   }
 // });
-const modelASHP = new MiniDecarbModel(configASHP, newBuildings);
-modelASHP.addBuildingFilter(
-  (b) => b.properties["substation_headroom"] >= 500,
-  "Substation Headroom >= 500"
-);
+const modelASHP = new MiniDecarbModel(config, newBuildings);
+// modelASHP.addBuildingFilter(
+//   (b) => b.properties["substation_headroom"] >= 500,
+//   "Substation Headroom >= 500"
+// );
 
-modelASHP.addPriorityRuleCustom({
-  attribute: "substation_capacity_rating",
-  scoreFunction: (value) =>
-    ({
-      800: 500,
-      1500: 1000,
-    }[value] || 0),
-});
+// modelASHP.addPriorityRuleCustom({
+//   attribute: "substation_capacity_rating",
+//   scoreFunction: (value) =>
+//     ({
+//       800: 500,
+//       1500: 1000,
+//     }[value] || 0),
+// });
 
 modelASHP.runModel();
 const results = modelASHP.getRecap();
-display(results);
-return {configASHP,modelASHP,results};
+// display(results);
+return {modelASHP,results};
+}});
+
+define({id: "0ed95c73", inputs: ["results"], outputs: ["data"], body: (results) => {
+const data = Object.entries(results.yearlyStats).map(([year, stats]) => ({
+  year: +year,
+  budgetSpent: stats.budgetSpent,
+  buildingsIntervened: stats.buildingsIntervened,
+}));
+return {data};
+}});
+
+define({id: "06fe437e", inputs: ["d3","data","display","Plot"], outputs: ["v1","v2","y2"], body: (d3,data,display,Plot) => {
+const v1 = (d) => d.budgetSpent;
+const v2 = (d) => d.buildingsIntervened;
+const y2 = d3.scaleLinear(d3.extent(data, v2), [0, d3.max(data, v1)]);
+
+display(
+  Plot.plot({
+    x: {
+      tickFormat: "", // display years without commas
+      label: "Year",
+    },
+    y: {
+      axis: "left",
+      label: "Budget Spent (£)",
+    },
+    marks: [
+      // Right axis for buildings intervened
+      Plot.axisY(y2.ticks(), {
+        color: "steelblue",
+        anchor: "right",
+        label: "Buildings Intervened",
+        y: y2,
+        tickFormat: y2.tickFormat(),
+      }),
+      // Rule at Y=0 for budget spent line baseline
+      Plot.ruleY([0]),
+      // Line for budget spent
+      Plot.line(data, {
+        x: "year",
+        y: v1,
+      }),
+      // Line for buildings intervened with mapped y2 scale
+      Plot.line(
+        data,
+        Plot.mapY((D) => D.map(y2), {
+          x: "year",
+          y: v2,
+          stroke: "steelblue",
+        })
+      ),
+    ],
+  })
+);
+return {v1,v2,y2};
 }});
 
 define({id: "216be021", inputs: ["display","Inputs","results"], body: (display,Inputs,results) => {
@@ -239,12 +390,21 @@ display(Inputs.table(results.allBuildings));
 <div id="observablehq-center">
 <main id="observablehq-main" class="observablehq">
 <div class="observablehq observablehq--block"><!--:bda9fba7:--></div>
+<!-- ------------ Data ------------ -->
+<div class="observablehq observablehq--block"><!--:d22197ed:--></div>
+<div class="observablehq observablehq--block"><!--:2adb250b:--></div>
 <h2 id="budget-allocator" tabindex="-1"><a class="observablehq-header-anchor" href="#budget-allocator">Budget Allocator</a></h2>
-<div class="observablehq observablehq--block"><!--:0c4fdd7c:--></div>
+<div class="observablehq observablehq--block"><!--:5c004f34:--></div>
+<div class="observablehq observablehq--block"><!--:c3ba039f:--></div>
 <h2 id="test-new-model" tabindex="-1"><a class="observablehq-header-anchor" href="#test-new-model">Test New Model</a></h2>
-<div class="observablehq observablehq--block"><!--:031eeacd:--></div>
-<div class="observablehq observablehq--block"><!--:e990e608:--></div>
-<div class="observablehq observablehq--block"><!--:c0938516:--></div>
+<div class="observablehq observablehq--block"><!--:f7665dd7:--></div>
+<p>Model Configuration:</p>
+<div class="observablehq observablehq--block"><!--:203a2375:--></div>
+<div class="observablehq observablehq--block"><!--:79324e46:--></div>
+<div class="observablehq observablehq--block"><!--:3141ed6a:--></div>
+<div class="observablehq observablehq--block"><!--:0ed95c73:--></div>
+<div class="observablehq observablehq--block"><!--:06fe437e:--></div>
+<p>All suitable buildings, with attribute showing intervention or non-intervention:</p>
 <div class="observablehq observablehq--block"><!--:216be021:--></div>
 </main>
 </div>
