--- a/drafts/tabletest2.html
+++ b/drafts/tabletest2.html
@@ -10,7 +10,7 @@
 <link rel="modulepreload" href="../_observablehq/client.js">
 <link rel="modulepreload" href="../_observablehq/runtime.js">
 <link rel="modulepreload" href="../_observablehq/stdlib.js">
-<link rel="modulepreload" href="../_import/components/sorterTable.c0ecb9b8.js">
+<link rel="modulepreload" href="../_import/components/sorterTable.02180658.js">
 <link rel="modulepreload" href="../_npm/d3@7.9.0/_esm.js">
 <link rel="modulepreload" href="../_observablehq/stdlib/duckdb.js">
 <link rel="modulepreload" href="../_npm/@duckdb/duckdb-wasm@1.28.0/_esm.js">
@@ -56,11 +56,11 @@ import {define} from "../_observablehq/client.js";
 import {registerFile, FileAttachment} from "../_observablehq/stdlib.js";
 import {registerTable} from "../_observablehq/stdlib/duckdb.js";
 
-registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.28ee7510.parquet","lastModified":1731419800476});
+registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.28ee7510.parquet","lastModified":1731422078380});
 registerTable("oxford", FileAttachment("../data/oxford_decarbonisation_data.parquet"));
 
 define({id: "5da2df3a", outputs: ["createTable"], body: async () => {
-const {createTable} = await import("../_import/components/sorterTable.c0ecb9b8.js");
+const {createTable} = await import("../_import/components/sorterTable.02180658.js");
 // import { sorterTable } from "./../components/sorterTableClass.js";
 return {createTable};
 }});
@@ -153,10 +153,10 @@ const [selected, setSelected] = useState({});
 return {useState,selected,setSelected};
 }});
 
-define({id: "da74c421", inputs: ["createTable","buildings","cols","setSelected"], outputs: ["table"], body: (createTable,buildings,cols,setSelected) => {
+define({id: "814fc617", inputs: ["createTable","buildings","cols","setSelected"], outputs: ["table"], body: (createTable,buildings,cols,setSelected) => {
 // const table = new createTable(buildings, cols, () => {});
 
-const table = new createTable(buildings, cols, (changes) => {
+const table = new createTable(buildings.map( p => ({...p})), cols, (changes) => {
   console.log("Table changed:", changes);
   setSelected(changes.selection);
 });
@@ -182,7 +182,7 @@ display(selected);
 <div class="observablehq observablehq--block"><!--:d11f8e11:--></div>
 <div class="observablehq observablehq--block"><!--:66011008:--></div>
 <div class="observablehq observablehq--block"><!--:ec01b706:--></div>
-<div class="observablehq observablehq--block"><!--:da74c421:--></div>
+<div class="observablehq observablehq--block"><!--:814fc617:--></div>
 <div class="observablehq observablehq--block"><!--:19721a50:--></div>
 <div class="observablehq observablehq--block"><!--:15548009:--></div>
 </main>
